fix covered navbar separaor

--- a/app/assets/stylesheets/weeks.scss
+++ b/app/assets/stylesheets/weeks.scss
@@ -38,7 +38,7 @@
   z-index: 1;
   position: absolute;
   left: 0;
-  top: 50px;
+  top: 52px;
   height: 34px;
   width: 100%;
 }
